--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "prepublishOnly": "npm run package",
     "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-    "test": "playwright test",
-    "lint": "eslint ."
+    "test": "npm run test:e2e && npm run test:unit",
+    "lint": "eslint .",
+    "test:e2e": "playwright test",
+    "test:unit": "vitest --run --coverage"
   },
+  "type": "module",
+  "types": "./dist/index.d.ts",
+  "svelte": "./dist/index.js",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -35,24 +40,24 @@
     "!dist/**/*.test.*",
     "!dist/**/*.spec.*"
   ],
-  "peerDependencies": {
-    "svelte": "4"
+  "dependencies": {
+    "svelte": "4.1.2"
   },
   "devDependencies": {
     "@playwright/test": "1.36.2",
     "@sveltejs/adapter-auto": "2.1.0",
     "@sveltejs/kit": "1.22.4",
     "@sveltejs/package": "2.2.0",
+    "@tadashi/hex-id": "2.0.0",
+    "@vitest/coverage-v8": "0.34.1",
     "eslint": "8.46.0",
     "eslint-plugin-svelte": "2.32.4",
+    "jsdom": "22.1.0",
     "publint": "0.2.0",
-    "svelte": "4.1.2",
     "svelte-check": "3.4.6",
     "tslib": "2.6.1",
     "typescript": "5.1.6",
-    "vite": "4.4.8"
-  },
-  "svelte": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "type": "module"
+    "vite": "4.4.8",
+    "vitest": "0.33.0"
+  }
 }
