--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install pnpm
         run: npm i -g pnpm
 
+      - name: Install playwright browsers
+        run: npx playwright install --with-deps
+
       - name: Install dependencies
         run: pnpm install
 
