--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,7 +24,8 @@ jobs:
         run: npm i -g pnpm
 
       - name: Install playwright browsers
-        run: npx playwright install --with-deps
+        # run: npx playwright install --with-deps
+        run: pnpm dlx playwright install --with-deps
 
       - name: Install dependencies
         run: pnpm install
