--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-root = true
+# root = true
 
 [*]
 indent_style = tab
@@ -9,8 +9,9 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{md,yml,yaml,json,graphql}]
+[*.{md,yml,yaml,json}]
 indent_style = space
+indent_size = 2
 
 [*.{md,yml,yaml}]
 trim_trailing_whitespace = false
