--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tadashi/svelte-notification",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Svelte component",
   "author": "Thiago Lagden",
   "license": "MIT",
@@ -21,9 +21,10 @@
     "prepublishOnly": "npm run package",
     "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-    "test": "npm run test:e2e && npm run test:unit",
-    "lint": "eslint .",
-    "test:e2e": "playwright test",
+    "test": "npm run test:integration && npm run test:unit",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write .",
+    "test:integration": "playwright test",
     "test:unit": "vitest --run --coverage"
   },
   "type": "module",
@@ -40,24 +41,28 @@
     "!dist/**/*.test.*",
     "!dist/**/*.spec.*"
   ],
-  "dependencies": {
-    "svelte": "4.1.2"
+  "peerDependencies": {
+    "@tadashi/hex-id": "*",
+    "svelte": ">=3.50.0"
   },
   "devDependencies": {
-    "@playwright/test": "1.36.2",
-    "@sveltejs/adapter-auto": "2.1.0",
-    "@sveltejs/kit": "1.22.4",
-    "@sveltejs/package": "2.2.0",
     "@tadashi/hex-id": "2.0.0",
-    "@vitest/coverage-v8": "0.34.1",
-    "eslint": "8.46.0",
-    "eslint-plugin-svelte": "2.32.4",
+    "@playwright/test": "1.37.1",
+    "@sveltejs/adapter-auto": "2.1.0",
+    "@sveltejs/kit": "1.24.1",
+    "@sveltejs/package": "2.2.2",
+    "@vitest/coverage-v8": "0.34.4",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-svelte": "2.33.1",
     "jsdom": "22.1.0",
-    "publint": "0.2.0",
-    "svelte-check": "3.4.6",
-    "tslib": "2.6.1",
-    "typescript": "5.1.6",
-    "vite": "4.4.8",
-    "vitest": "0.33.0"
+    "prettier": "3.0.3",
+    "prettier-plugin-svelte": "3.0.3",
+    "publint": "0.2.2",
+    "svelte": "4.2.0",
+    "svelte-check": "3.5.1",
+    "tslib": "2.6.2",
+    "typescript": "5.2.2",
+    "vite": "4.4.9",
+    "vitest": "0.34.4"
   }
 }
