--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,12 @@
 .DS_Store
+.svelte-kit
+build
+dist
 node_modules
-/build
-/dist
-/.svelte-kit
-/package
-.env
-.env.*
-!.env.example
+package
+
+.env*
 vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
+
 coverage/**
 !coverage/lcov.info
-
-# ver quem gera esse cara
-test-results
