--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tadashi/svelte-notification",
-  "version": "1.2.1",
+  "version": "1.2.3",
   "description": "Svelte component",
   "author": "Thiago Lagden",
   "license": "MIT",
@@ -13,6 +13,20 @@
     "url": "https://github.com/lagden/svelte-notification/issues"
   },
   "homepage": "https://github.com/lagden/svelte-notification#readme",
+  "type": "module",
+  "types": "./dist/index.d.ts",
+  "svelte": "./dist/index.js",
+  "files": [
+    "dist",
+    "!dist/**/*.test.*",
+    "!dist/**/*.spec.*"
+  ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "svelte": "./dist/index.js"
+    }
+  },
   "scripts": {
     "dev": "vite dev",
     "build": "vite build && npm run package",
@@ -21,35 +35,20 @@
     "prepublishOnly": "npm run package",
     "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-    "test": "npm run test:integration && npm run test:unit",
+    "test": "npm run lint && npm run test:integration && npm run test:unit",
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
     "test:integration": "playwright test",
     "test:unit": "vitest --run --coverage"
   },
-  "type": "module",
-  "types": "./dist/index.d.ts",
-  "svelte": "./dist/index.js",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "svelte": "./dist/index.js"
-    }
-  },
-  "files": [
-    "dist",
-    "!dist/**/*.test.*",
-    "!dist/**/*.spec.*"
-  ],
   "peerDependencies": {
     "@tadashi/hex-id": "*",
-    "svelte": ">=3.50.0"
+    "svelte": ">=3.50"
   },
   "devDependencies": {
-    "@tadashi/hex-id": "2.0.0",
     "@playwright/test": "1.37.1",
     "@sveltejs/adapter-auto": "2.1.0",
-    "@sveltejs/kit": "1.24.1",
+    "@sveltejs/kit": "1.25.0",
     "@sveltejs/package": "2.2.2",
     "@vitest/coverage-v8": "0.34.4",
     "eslint-config-prettier": "9.0.0",
