--- a/.eslintignore
+++ b/.eslintignore
@@ -1,13 +1,9 @@
 .DS_Store
+.svelte-kit
+build
+coverage
+dist
 node_modules
-/build
-/.svelte-kit
-/package
-.env
-.env.*
-!.env.example
-
-# Ignore files for PNPM, NPM and YARN
-pnpm-lock.yaml
-package-lock.json
-yarn.lock
+package
+.env*
+vite.config.js.timestamp-*
