--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -30,7 +30,7 @@ jobs:
         run: pnpm install
 
       - name: Run test
-        run: pnpm test
+        run: npm test
 
       - name: Coveralls
         uses: coverallsapp/github-action@master
