--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,9 @@
 engine-strict=true
 resolution-mode=highest
 auto-install-peers=true
+
+# TEx pkgs
+//gitlab.textecnologia.io/api/v4/packages/npm/:_authToken=glpat-SzBHz58z8KCtXSqvKFAR
+//gitlab.textecnologia.io/api/v4/:_authToken=glpat-SzBHz58z8KCtXSqvKFAR
+@xet:registry=https://gitlab.textecnologia.io/api/v4/packages/npm/
+@texsvelte:registry=https://gitlab.textecnologia.io/api/v4/packages/npm/
