--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tadashi/svelte-notification",
-  "version": "1.2.5",
+  "version": "1.3.0",
   "description": "Svelte component",
   "author": "Thiago Lagden",
   "license": "MIT",
@@ -25,22 +25,45 @@
     ".": {
       "types": "./dist/index.d.ts",
       "svelte": "./dist/index.js"
+    },
+    "./dist/components/Base.svelte": {
+      "types": "./dist/components/Base.svelte.d.ts",
+      "svelte": "./dist/components/Base.svelte"
+    },
+    "./dist/components/Notification.svelte": {
+      "types": "./dist/components/Notification.svelte.d.ts",
+      "svelte": "./dist/components/Notification.svelte"
+    },
+    "./dist/components/Notifications.svelte": {
+      "types": "./dist/components/Notifications.svelte.d.ts",
+      "svelte": "./dist/components/Notifications.svelte"
+    },
+    "./dist/util/acts.js": {
+      "types": "./dist/util/acts.d.ts",
+      "svelte": "./dist/util/acts.js"
+    },
+    "./dist/util/store.js": {
+      "types": "./dist/util/store.d.ts",
+      "svelte": "./dist/util/store.js"
     }
   },
   "scripts": {
+    "rm": "rimraf dist",
     "dev": "vite dev",
-    "build": "vite build && npm run package",
+    "build:vite": "vite build",
+    "build": "run-s rm build:vite package",
     "preview": "vite preview",
     "package": "svelte-kit sync && svelte-package && publint",
-    "prepublishOnly": "npm run package",
+    "prepublishOnly": "run-s test build",
     "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-    "test": "npm run lint && npm run test:integration && npm run test:unit",
-    "lint": "prettier --check . && eslint .",
-    "format": "prettier --write .",
+    "lint": "prettier --check --plugin prettier-plugin-svelte . && eslint .",
+    "format": "prettier --write --plugin prettier-plugin-svelte .",
     "test:integration": "playwright test",
     "test:unit": "vitest --run --coverage",
-    "test:ui": "vitest --ui --coverage"
+    "test:ui": "vitest --ui --coverage",
+    "test:full": "run-s rm lint test:integration test:unit",
+    "test": "run-s rm lint test:unit"
   },
   "dependencies": {
     "@tadashi/hex-id": "3.0.2"
@@ -49,23 +72,25 @@
     "svelte": ">=3.50"
   },
   "devDependencies": {
-    "@playwright/test": "1.37.1",
-    "@sveltejs/adapter-auto": "2.1.0",
-    "@sveltejs/kit": "1.25.0",
-    "@sveltejs/package": "2.2.2",
-    "@vitest/coverage-v8": "0.34.4",
-    "@vitest/ui": "0.34.4",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-svelte": "2.33.1",
-    "jsdom": "22.1.0",
-    "prettier": "3.0.3",
-    "prettier-plugin-svelte": "3.0.3",
-    "publint": "0.2.2",
-    "svelte": "4.2.0",
-    "svelte-check": "3.5.1",
+    "@playwright/test": "1.40.1",
+    "@sveltejs/adapter-auto": "3.0.0",
+    "@sveltejs/kit": "2.0.2",
+    "@sveltejs/package": "2.2.3",
+    "@vitest/coverage-v8": "1.0.4",
+    "@vitest/ui": "1.0.4",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-svelte": "2.35.1",
+    "jsdom": "23.0.1",
+    "npm-run-all": "4.1.5",
+    "prettier": "3.1.1",
+    "prettier-plugin-svelte": "3.1.2",
+    "publint": "0.2.6",
+    "rimraf": "5.0.5",
+    "svelte": "4.2.8",
+    "svelte-check": "3.6.2",
     "tslib": "2.6.2",
-    "typescript": "5.2.2",
-    "vite": "4.4.9",
-    "vitest": "0.34.4"
+    "typescript": "5.3.3",
+    "vite": "5.0.10",
+    "vitest": "1.0.4"
   }
 }
